# boyer_moore

./: CMakeLists.txt  README.md
cmake/: FetchSpdLog.cmake
examples/simple/: CMakeLists.txt  searchspace.txt  simple.cpp
include/boyer_moore/: boyer_moore.h  pattern.h  searchspace.h
src/: boyer_moore.cpp  pattern.cpp  searchspace.cpp
